--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* body::-webkit-scrollbar {
+  display: none;
+} */
