--- a/src/app/flashcards/flashcard-list.component.html
+++ b/src/app/flashcards/flashcard-list.component.html
@@ -2,24 +2,7 @@
   <div class="flashcardList__banner"></div>
   <div class="flashcardList__content">
     <div *ngFor="let box of boxes" class="box">
-      <div class="box__row" (click)="toggleBox()">
-        <h1>{{ box.name }}</h1>
-      </div>
-      <div *ngIf="showDecks" class="box__decks">
-        <div *ngFor="let deck of box.decks" class="deck">
-          <div class="deck__row" (click)="toggleDeck()">
-            <h2>{{ deck.name }}</h2>
-          </div>
-          <div *ngIf="showFlashcards" class="deck__flashcards">
-            <div *ngFor="let flashcard of deck.flashcards" class="flashcard">
-              <h3>{{ flashcard.question }}</h3>
-            </div>
-          </div>
-        </div>
-        <!-- <div *ngIf="box.decks.length % 3 == 2 || box.decks.length % 3 == 2" class="deck"></div> -->
-        <div class="deck"></div>
-        <div class="deck"></div>
-      </div>
+      <fml-box [box]="box"></fml-box>
     </div>
   </div>
 </div>
