--- a/src/app/flashcards/flashcard.component.html
+++ b/src/app/flashcards/flashcard.component.html
@@ -1,1 +1,4 @@
-<h3>{{ flashcard.question }}</h3>
+<div class="flashcard__row">
+  <h3>{{ flashcard.question }}</h3>
+  <h5>{{ flashcard.answer }}</h5>
+</div>
