--- a/src/app/flashcards/flashcard-list.component.css
+++ b/src/app/flashcards/flashcard-list.component.css
@@ -1,30 +1,98 @@
-.flashcardList {
+.flashcard-list {
+  min-height: 90vh;
   width: 100%;
-  padding-top: 120px;
-  background-color: #fcede7;
+  background-color: #db6637;
 }
 
-.flashcardList__banner {
+.flashcard-list__banner {
   height: 5vh;
   width: 100%;
   background-color: #242b31;
 }
 
-.flashcardList__content {
-  /* padding-top: 60px;
-  padding-left: 10vw;
-  padding-right: 10vw; */
-
+.flashcard-list__content {
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
+  gap: 20px;
+  padding: 30px;
+  font-size: 0.8rem;
+}
+
+.flashcard-list__box {
+  width: 60vw;
+}
+
+.flashcard-list__deck {
+  flex: 1 0 250px;
+}
+
+.box__row {
+  padding: 15px;
+  text-align: center;
+  background-color: #242b31;
+  color: #fcede7;
+  border: solid 5px#242b31;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.box__row:hover {
+  background-color: #fcede7;
+  color: #db6637;
+}
+
+.box__decks {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   gap: 20px;
   padding: 30px;
 }
 
-.box {
-  /* margin-bottom: 20px; */
+@media screen and (max-width: 900px) {
+  .flashcard-list__box {
+    width: 100%;
+  }
+}
 
-  flex-grow: 1;
-  flex-basis: 30%;
-  min-width: 250px;
+.deck__row {
+  padding: 10px;
+  text-align: center;
+  background-color: #242b31;
+  color: #fcede7;
+  border: solid 5px#242b31;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.deck__row:hover {
+  background-color: #fcede7;
+  color: #db6637;
+}
+
+.deck__flashcards {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 5px;
+  padding: 20px;
+}
+
+.flashcard-list__flashcard {
+  flex: 1 0 auto;
+}
+
+.flashcard__row {
+  padding: 8px;
+  text-align: left;
+  background-color: #242b31;
+  color: #fcede7;
+  border: solid 5px#242b31;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.flashcard__row > h3,
+h5 {
+  font-weight: 300;
 }
