--- a/src/app/flashcards/flashcard-list.component.html
+++ b/src/app/flashcards/flashcard-list.component.html
@@ -1,8 +1,15 @@
-<div class="flashcardList">
-  <div class="flashcardList__banner"></div>
-  <div class="flashcardList__content">
-    <div *ngFor="let box of boxes" class="box">
-      <fml-box [box]="box"></fml-box>
+<div class="flashcard-list">
+  <div class="flashcard-list__banner"></div>
+  <div class="flashcard-list__content">
+    <fml-box
+      *ngFor="let box of boxes"
+      [box]="box"
+      [ngClass]="'flashcard-list__box'"
+    ></fml-box>
+    <div class="flashcard-list__box">
+      <div class="box__row">
+        <h1>+ Add Box</h1>
+      </div>
     </div>
   </div>
 </div>
