--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,8 +1,13 @@
 .nav {
-  position: fixed;
+  position: sticky;
+  min-height: 120px;
   width: 100%;
   z-index: 1001;
-  min-height: 120px;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #242b31;
 
   /* Animations */
   transition-timing-function: ease-in;
@@ -10,15 +15,15 @@
 }
 
 .nav:hover {
-  background-color: #242b31;
+  background-color: transparent;
 }
 
 .nav__logo {
-  color: #db6637;
-  font-size: 2rem;
-  line-height: 1.5rem;
-  font-weight: 800;
-  padding: 32px;
+  flex-basis: 200px;
   text-align: center;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 1.5rem;
+  color: #db6637;
   cursor: default;
 }
