--- a/src/app/flashcards/flashcard-list.component.css
+++ b/src/app/flashcards/flashcard-list.component.css
@@ -35,6 +35,10 @@
   border: solid 5px#242b31;
   border-radius: 50px;
   cursor: pointer;
+
+  /* Animations */
+  transition-timing-function: ease-in;
+  transition: all 0.3s;
 }
 
 .box__row:hover {
@@ -50,12 +54,6 @@
   padding: 30px;
 }
 
-@media screen and (max-width: 900px) {
-  .flashcard-list__box {
-    width: 100%;
-  }
-}
-
 .deck__row {
   padding: 10px;
   text-align: center;
@@ -64,6 +62,10 @@
   border: solid 5px#242b31;
   border-radius: 50px;
   cursor: pointer;
+
+  /* Animations */
+  transition-timing-function: ease-in;
+  transition: all 0.3s;
 }
 
 .deck__row:hover {
@@ -95,4 +97,10 @@
 .flashcard__row > h3,
 h5 {
   font-weight: 300;
+}
+
+@media screen and (max-width: 900px) {
+  .flashcard-list__box {
+    width: 100%;
+  }
 }
