--- a/src/app/flashcards/flashcard-add.component.html
+++ b/src/app/flashcards/flashcard-add.component.html
@@ -1,12 +1,15 @@
 <div class="flashcard-add">
   <div class="flashcard-add__window">
-    <div class="flashcard-add__close"></div>
+    <div class="flashcard-add__close">
+      <i class="fa-solid fa-xmark"></i>
+    </div>
     <div class="flashcard-add__picture"></div>
     <div class="flashcard-add__content">
-      <h3>
+      <div class="funfact">
         Roman Emperor Gaius, more famously known as Caligula, loved his horse so
         much he appointed him as senator.
-      </h3>
+      </div>
+      <input />
       <input />
       <button>Save Box</button>
     </div>
