--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <fml-nav></fml-nav>
-<!-- <fml-home></fml-home> -->
-<fml-flashcard-list></fml-flashcard-list>
+<router-outlet></router-outlet>
+<fml-footer></fml-footer>
