--- a/src/app/flashcards/flashcard-add.component.css
+++ b/src/app/flashcards/flashcard-add.component.css
@@ -13,16 +13,19 @@
 
 .flashcard-add__window {
   position: relative;
-  flex: 0 0 auto;
+  width: 30vw;
+  max-width: 600px;
+  min-width: 320px;
+  flex: 1 0 auto;
   display: flex;
   flex-flow: column nowrap;
-  gap: 20px;
+  gap: 10px;
+  box-sizing: border-box;
   padding: 0 20px 20px 20px;
+  margin-left: 10px;
+  margin-right: 10px;
   border-radius: 10px;
   background-color: #fcede7;
-  width: 40vw;
-  min-width: 360px;
-  min-height: 280px;
 }
 
 .flashcard-add__close {
@@ -39,26 +42,29 @@
 }
 
 .flashcard-add__content {
-  flex: 1 0 30vh;
+  flex: 1 0 auto;
   display: flex;
   flex-flow: column nowrap;
   padding: 0 20px;
-  gap: 10px;
+  gap: 8px;
 }
 
-.flashcard-add__content > h3 {
+.funfact {
+  display: flex;
   flex: 2 0 auto;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 500;
+  margin-bottom: 20px;
 }
 
 .flashcard-add__content > input,
 button {
+  display: flex;
   flex: 1 0 auto;
   border: 1px solid #242b31;
   border-radius: 5px;
-  padding: 8px;
+  padding: 6px;
   font-weight: 700;
   font-size: 1rem;
   text-decoration: none;
@@ -68,22 +74,21 @@ button {
 .flashcard-add__content > button {
   border: none;
   background-color: #242b31;
+  justify-content: center;
   color: #fcede7;
 }
 
-.funfact {
-}
-
 .flashcard-add__picture {
+  flex: 1 0 20vh;
+  max-height: 200px;
   background-image: url("https://www.nawpic.com/media/2020/spirited-away-nawpic-23.jpg");
   background-position: center;
   background-size: cover;
-  border-radius: 0 0 10px 10px;
-  flex: 1 0 25vh;
+  border-radius: 0 0 5px 5px;
 }
-/* 
+
 @media screen and (max-width: 600px) {
-  .flashcard-add__content > p {
-    font-size: 2vw;
+  .funfact {
+    font-size: 3vw;
   }
-} */
+}
