--- a/src/app/flashcards/flashcard-list.component.html
+++ b/src/app/flashcards/flashcard-list.component.html
@@ -2,16 +2,16 @@
   <div class="flashcard-list__banner"></div>
   <div class="flashcard-list__content">
     <fml-box
-      *ngFor="let box of boxes"
-      [box]="box"
+      *ngFor="let b of boxes"
+      [box]="b"
       [ngClass]="'flashcard-list__box'"
     ></fml-box>
     <div class="flashcard-list__box">
-      <div class="box__row">
+      <div class="box__row" (click)="dodaj()">
         <h1>+ Add Box</h1>
       </div>
     </div>
   </div>
 </div>
 
-<fml-flashcard-add></fml-flashcard-add>
+<fml-flashcard-add *ngIf="add"></fml-flashcard-add>
