--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,19 @@
 <header class="nav">
-  <div class="nav__logo">
+  <div class="nav__left"></div>
+  <div class="nav__logo" routerLink="">
     <p>Plenty</p>
     <p>Flashcards</p>
+  </div>
+  <div class="nav__right">
+    <ul class="nav__links">
+      <li routerLink="/oops">
+        <i class="fa-solid fa-store"></i>
+        <a>MARKET</a>
+      </li>
+      <li routerLink="/login">
+        <i class="fa-solid fa-user"></i>
+        <a>SIGN IN</a>
+      </li>
+    </ul>
   </div>
 </header>
