--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,9 +6,9 @@
         <h2>ABOUT US</h2>
       </div>
       <ul class="footer__content">
-        <li><a>Our Story</a></li>
-        <li><a>Contact Us</a></li>
-        <li><a>Careers</a></li>
+        <li><a routerLink="/oops">Our Story</a></li>
+        <li><a routerLink="/oops">Contact Us</a></li>
+        <li><a routerLink="/oops">Careers</a></li>
       </ul>
     </div>
     <div class="grid__item">
@@ -16,9 +16,9 @@
         <h2>SERVICES</h2>
       </div>
       <ul class="footer__content">
-        <li><a>FAQ</a></li>
-        <li><a>Privacy Policy</a></li>
-        <li><a>Donations</a></li>
+        <li><a routerLink="/oops">FAQ</a></li>
+        <li><a routerLink="/oops">Privacy Policy</a></li>
+        <li><a routerLink="/oops">Donations</a></li>
       </ul>
     </div>
     <div class="grid__item">
@@ -26,21 +26,45 @@
         <h2>FOLLOW US</h2>
       </div>
       <ul class="footer__icons">
-        <li><i class="fa-brands fa-square-facebook"></i></li>
-        <li><i class="fa-brands fa-square-twitter"></i></li>
-        <li><i class="fa-brands fa-instagram"></i></li>
-        <li><i class="fa-brands fa-tiktok"></i></li>
+        <li>
+          <a href="https://www.facebook.com/">
+            <i class="fa-brands fa-square-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/home/"
+            ><i class="fa-brands fa-square-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.tiktok.com/"
+            ><i class="fa-brands fa-tiktok"></i
+          ></a>
+        </li>
       </ul>
     </div>
     <div class="grid__item">
       <div class="footer__header">
         <h2>SIGN UP</h2>
+        <p>Make sure to sign up to our monthly newsletter</p>
       </div>
-      <form class="footer__form">
-        <input />
-        <button>JOIN</button>
+      <form
+        class="footer__form"
+        novalidate
+        (ngSubmit)="join()"
+        [formGroup]="joinForm"
+      >
+        <input placeholder="email@example.com" email formControlName="email" />
+        <button type="submit" [disabled]="!joinForm.valid">JOIN</button>
       </form>
     </div>
   </div>
-  <div class="footer__signature"></div>
+  <div class="footer__signature">
+    <p>Website created by Bukrejewski Dominik</p>
+  </div>
 </div>
