--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,41 +1,35 @@
 .home {
+  position: relative;
   width: 100%;
   height: 100vh;
   background-color: #fcede7;
+  text-align: center;
 }
 
 .home__button {
   position: absolute;
-  width: 20vw;
-  min-width: 300px;
+  left: 0;
+  right: 0;
+  bottom: 25%;
+  margin: 0 auto;
+
+  width: 300px;
   padding: 10px;
+  box-sizing: border-box;
+
   border-radius: 50px;
-  background-color: #242b31;
   border: solid 2px#242b31;
-  color: #db6637;
+  color: #fcede7;
+  background-color: #242b31;
   font-size: 1.5rem;
   font-weight: 800;
 
-  left: 40%;
-  bottom: 10%;
+  /* Animations */
+  transition-timing-function: ease-in;
+  transition: all 0.3s;
 }
 
 .home__button:hover {
-  background-color: #fcede7;
   color: #db6637;
-}
-
-.home--blur {
-  /* background: rgba(255, 255, 255, 0.2); */
-  /* backdrop-filter: blur(8px); */
-  /* height: 40vh;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-image: linear-gradient(
-    180deg,
-    transparent,
-    rgba(37, 37, 37, 0.61),
-    #1b1c1e
-  ); */
+  border: solid 2px#db6637;
 }
